--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.34.0", features = ["full"]}
+uuid = { version = "1.6.1", features= ["v4", "fast-rng", "macro-diagnostics"]}
