--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.27.0"
 tokio = { version = "1.34.0", features = ["full"]}
 uuid = { version = "1.6.1", features= ["v4", "fast-rng", "macro-diagnostics"]}
